--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -18,7 +18,7 @@
     <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column h-100">
-<main class="flex-shrink-0">
+<main class="flex-shrink-0 mt-5">
     <!-- Navigation-->
     <div th:insert="menu :: menu"></div>
 
@@ -37,7 +37,7 @@
 
 </main>
 <!-- Footer-->
-<div th:insert="footer :: footer"></div>
+<!--<div th:insert="footer :: footer"></div>-->
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
